# haskell-half-edge-mesh

./: half-edge-mesh.cabal
src/: Main.hs
src/Data/: HalfEdgeMesh.hs
tests/: Tests.hs
